[package]
name = "nodedb-cluster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
nodedb-raft = { workspace = true }

# Workspace deps
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

# Serialization (compact binary for RPCs — matches nexar wire format)
rkyv = { version = "0.8", features = ["alloc"] }

# Checksums
crc32c = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
